init entidades e dados

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.gabrielferreira</groupId>
-	<artifactId>api-evento</artifactId>
+	<artifactId>evento</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>api-evento</name>
 	<description>API Evento</description>
