--- a/backend-v2/src/main/resources/application-dev.yaml
+++ b/backend-v2/src/main/resources/application-dev.yaml
@@ -18,3 +18,7 @@ logging:
 
 via:
   cep: https://viacep.com.br/ws/
+
+jwt:
+  secret: ${JWT_SECRET:ES;%8_gCf)e+*q[J(mM@#6Tp>k*Ft=/j5{q_8cD~;bu)n?7;Yz`d2(RbgpWS!._A[cszkq}(:/]2<@3pa[f,nHZ5m9Mr6xwS:/,H&U3A>Ds;[W}
+  expiration: ${JWT_EXPIRATION:3600000}
