--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:17
 LABEL maintainer="Gabriel Ferreira <ferreiragabriel2612@gmail.com>"
-WORKDIR /app
+WORKDIR /backend
 EXPOSE 8080
-COPY target/eventos-0.0.1-SNAPSHOT.jar /app/eventos.jar
+COPY backend/target/eventos-0.0.1-SNAPSHOT.jar /backend/eventos.jar
 ENTRYPOINT ["java","-jar","eventos.jar"]
